syntax = "proto3";
// The package directive (when generating Java src files) tells protoc where to store the generated Java files
package app.model.objects.generated;

import "google/protobuf/timestamp.proto";

// proto standard says field names should be lower_snake_case
// except enum values which should be SCREAMING_SNAKE_CASE
// TODO: DELETE THIS LINE TO TRIGGER A GIT MODIFY EVENT

message SensorData {
  int32 id = 1;
  optional string make = 2;
  optional string model = 3;
  double flux_capacitor_reading = 4;
  double clock_skew_pico_seconds = 5;
  int32 destination_year = 6;
  google.protobuf.Timestamp last_check_in = 7;
  bool toggle_switch_on = 8;
  bool safety_belts_on = 9;
}